--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,6 +3,11 @@ kind: Component
 metadata:
   annotations:
     backstage.io/kubernetes-id: my-kubernetes-component
+    github.com/project-slug: lokeshrangineni/backstage-demo-k8-sample-component
+    github.com/project-readme-path: README.md
+    backstage.io/view-url: https://github.com/lokeshrangineni/backstage-demo-k8-sample-component/blob/main/catalog-info.yaml
+    backstage.io/edit-url: https://github.com/lokeshrangineni/backstage-demo-k8-sample-component/blob/main/catalog-info.yaml
+    backstage.io/source-location: url:https://github.com/lokeshrangineni/backstage-demo-k8-sample-component
   name: my-kubernetes-component
 spec:
   lifecycle: production
