--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -9,6 +9,7 @@ metadata:
     backstage.io/edit-url: https://github.com/lokeshrangineni/backstage-demo-k8-sample-component/blob/main/catalog-info.yaml
     backstage.io/source-location: url:https://github.com/lokeshrangineni/backstage-demo-k8-sample-component
     tektonci/build-namespace: loki-backstage
+    argocd/app-name: sockshop
     backstage.io/techdocs-ref: url:https://github.com/lokeshrangineni/backstage-demo-k8-sample-component/blob/main/README.md
   name: my-kubernetes-component
 spec:
