--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -10,7 +10,7 @@ metadata:
     backstage.io/source-location: url:https://github.com/yzhao583/backstage-demo-k8-sample-component
     argocd/app-name: guestbook
     backstage.io/techdocs-ref: url:https://github.com/lokeshrangineni/backstage-demo-k8-sample-component/blob/main/README.md
-  name: my-kubernetes-component
+  name: my-kubernetes-component-new
 spec:
   lifecycle: production
   owner: my-team
